--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Portfolio</title>
+  <title>Portfolio | Thuthuka Khumalo Creative Developer</title>
+  <meta name="description" content="Thuthuka Khumalo is a South African Based Sofware Developer. Specialising in Web Development and Graphic Design. Examples of expertise and previous projects include: Digital Menu Platform, Real Time Sumulation, Photoshop">
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
